# lmbox-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: _config.yml  index.md  release-process.md
docs/adr/: 001-agent-manifest.md  002-citation-verifier.md  003-runtime-enforcement.md  004-structured-output.md  005-grounding.md
lmbox_cli/: __init__.py  __main__.py  _bundle.py  _llm.py  _manifest.py  _paths.py  _upload.py  cli.py
lmbox_cli/_adapters/: __init__.py  base.py  openclaw.py
lmbox_cli/_evals/: __init__.py  assertions.py  loader.py  runner.py
lmbox_cli/_grounding/: __init__.py  enforcer.py  tracer.py
lmbox_cli/_outputs/: __init__.py  linter.py  repair.py  validator.py
lmbox_cli/_runtime/: __init__.py  guarded_stream.py
lmbox_cli/_verifier/: README.md  __init__.py  extractor.py  legifrance.py  streaming.py  verifier.py
lmbox_cli/commands/: build.py  check_grounding.py  deploy.py  lint_schema.py  new.py  pack.py  run.py  test.py  validate.py  verify.py
lmbox_cli/schema/: agent_v1.schema.json
lmbox_cli/templates/_base/: .gitignore  README.md  manifest.yaml
lmbox_cli/templates/_base/evals/: golden.jsonl
lmbox_cli/templates/_base/prompts/: system.md
lmbox_cli/templates/legal-document/: .gitignore  README.md  manifest.yaml
lmbox_cli/templates/legal-document/evals/: golden.jsonl
lmbox_cli/templates/legal-document/prompts/: system.md
tests/: test_build.py  test_check_grounding_command.py  test_deploy.py  test_evals.py  test_grounding.py  test_lint_schema_command.py  test_new.py  test_outputs.py  test_pack.py  test_run_command.py  test_runtime_guard.py  test_test_command.py  test_validate.py  test_verifier.py  test_verifier_streaming.py  test_verify_command.py
