[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lmbox-cli"
version = "0.1.0"
description = "CLI to scaffold, test, and deploy LMbox agents onto sovereign on-prem appliances."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LMbox", email = "partenaires@lmbox.eu" }]
keywords = ["lmbox", "agent", "ai", "sovereign", "on-prem", "openclaw", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
lmbox = "lmbox_cli.cli:app"

[project.urls]
Homepage = "https://lmbox.eu/partenaires"
Repository = "https://github.com/rlacotte/lmbox-cli"
Documentation = "https://docs.lmbox.eu/agent-sdk"
Issues = "https://github.com/rlacotte/lmbox-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["lmbox_cli"]

[tool.hatch.build.targets.wheel.force-include]
"lmbox_cli/templates" = "lmbox_cli/templates"
"lmbox_cli/schema" = "lmbox_cli/schema"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]
