[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lmbox-cli"
version = "0.1.0"
description = "CLI to scaffold, test, and deploy LMbox agents onto sovereign on-prem appliances."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LMbox", email = "partenaires@lmbox.eu" }]
keywords = ["lmbox", "agent", "ai", "sovereign", "on-prem", "openclaw", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "jinja2>=3.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
lmbox = "lmbox_cli.cli:app"

[project.urls]
Homepage = "https://lmbox.eu/partenaires"
Repository = "https://github.com/rlacotte/lmbox-cli"
Documentation = "https://docs.lmbox.eu/agent-sdk"
Issues = "https://github.com/rlacotte/lmbox-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["lmbox_cli"]
# Templates + schema are inside lmbox_cli/, so they're picked up by
# the package include automatically. Hatchling does NOT skip non-.py
# files (unlike setuptools default). No need for force-include.

[tool.hatch.build.targets.sdist]
# Source distributions ship everything tracked by git, plus the LICENSE
# and pyproject.toml. Tests are included so `python -m pytest`
# works on a fresh untarred source.
include = [
  "lmbox_cli/**",
  "tests/**",
  "docs/**",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
# B008 is incompatible with Typer's idiom of using `typer.Argument(...)` /
# `typer.Option(...)` as default values — that's exactly how Typer
# discovers parameter metadata. E501 is handled by the formatter.
ignore = ["E501", "B008"]
